--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,9 @@
     <version>1.0-SNAPSHOT</version>
 
     <packaging>pom</packaging>
+    <modules>
+        <module>application</module>
+    </modules>
 
     <properties>
         <maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
@@ -32,7 +35,7 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>${maven-compiler-plugin.version}</version>
                 <configuration>
-                    <release>17</release>
+                    <release>20</release>
                 </configuration>
             </plugin>
         </plugins>
