--- a/application/pom.xml
+++ b/application/pom.xml
@@ -16,5 +16,9 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.klemo.ecommerce</groupId>
+            <artifactId>cart-application</artifactId>
+        </dependency>
     </dependencies>
 </project>
