--- a/sales/cart/cart-infrastructure/cart-messaging/pom.xml
+++ b/sales/cart/cart-infrastructure/cart-messaging/pom.xml
@@ -5,8 +5,9 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.klemo.ecommerce</groupId>
-        <artifactId>cart-infrastructure</artifactId>
+        <artifactId>cart</artifactId>
         <version>1.0-SNAPSHOT</version>
+        <relativePath>../../pom.xml</relativePath>
     </parent>
 
     <artifactId>cart-messaging</artifactId>
