--- a/sales/cart/cart-infrastructure/pom.xml
+++ b/sales/cart/cart-infrastructure/pom.xml
@@ -5,15 +5,9 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.klemo.ecommerce</groupId>
-        <artifactId>sales</artifactId>
+        <artifactId>cart</artifactId>
         <version>1.0-SNAPSHOT</version>
-        <relativePath>../../pom.xml</relativePath>
     </parent>
 
     <artifactId>cart-infrastructure</artifactId>
-    <packaging>pom</packaging>
-    <modules>
-        <module>cart-dataaccess</module>
-        <module>cart-messaging</module>
-    </modules>
 </project>
