--- a/sales/cart/cart-application/pom.xml
+++ b/sales/cart/cart-application/pom.xml
@@ -10,4 +10,15 @@
     </parent>
 
     <artifactId>cart-application</artifactId>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+    </dependencies>
 </project>
