feat: add common module and domain Entity, AggregateRoot base classes

--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,8 @@
     <modules>
         <module>application</module>
         <module>sales</module>
+        <module>common</module>
+        <module>common/common-domain</module>
     </modules>
 
     <properties>
