--- a/pom.xml
+++ b/pom.xml
@@ -54,10 +54,13 @@
                 <artifactId>cart-messaging</artifactId>
                 <version>${project.version}</version>
             </dependency>
+            <dependency>
+                <groupId>com.klemo.ecommerce</groupId>
+                <artifactId>common-domain</artifactId>
+                <version>${project.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
-
-    <dependencies></dependencies>
 
     <build>
         <plugins>
