--- a/sales/cart/cart-domain/cart-domain-core/pom.xml
+++ b/sales/cart/cart-domain/cart-domain-core/pom.xml
@@ -7,7 +7,15 @@
         <groupId>com.klemo.ecommerce</groupId>
         <artifactId>cart</artifactId>
         <version>1.0-SNAPSHOT</version>
+        <relativePath>../../pom.xml</relativePath>
     </parent>
 
     <artifactId>cart-domain-core</artifactId>
+
+    <dependencies>
+        <dependency>
+            <groupId>com.klemo.ecommerce</groupId>
+            <artifactId>common-domain</artifactId>
+        </dependency>
+    </dependencies>
 </project>
