--- a/sales/cart/cart-application/pom.xml
+++ b/sales/cart/cart-application/pom.xml
@@ -20,5 +20,13 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.klemo.ecommerce</groupId>
+            <artifactId>cart-application-service</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.klemo.ecommerce</groupId>
+            <artifactId>cart-dataaccess</artifactId>
+        </dependency>
     </dependencies>
 </project>
