--- a/sales/cart/pom.xml
+++ b/sales/cart/pom.xml
@@ -20,4 +20,16 @@
         <module>cart-infrastructure/cart-dataaccess</module>
         <module>cart-infrastructure/cart-messaging</module>
     </modules>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>19</source>
+                    <target>19</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
