--- a/application/src/main/resources/application.properties
+++ b/application/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.defer-datasource-initialization=true
-spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.url=jdbc:h2:/tmp/ecommerce;AUTO_SERVER=TRUE
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
@@ -8,4 +8,3 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 spring.sql.init.platform=h2
 spring.h2.console.enabled=true
-h2.tcp.enabled=true
