--- a/sales/sales-common/pom.xml
+++ b/sales/sales-common/pom.xml
@@ -5,18 +5,18 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.klemo.ecommerce</groupId>
-        <artifactId>ecommerce</artifactId>
+        <artifactId>sales</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>sales</artifactId>
     <packaging>pom</packaging>
 
+    <artifactId>sales-common</artifactId>
+
     <modules>
-        <module>cart</module>
-        <module>catalog</module>
-        <module>order</module>
-        <module>cart/cart-domain</module>
-        <module>sales-common</module>
+        <module>sales-domain</module>
+        <module>sales-domain/sales-application-service</module>
+        <module>sales-domain/sales-domain-core</module>
+        <module>sales-infrastructure</module>
     </modules>
 </project>
