--- a/sales/sales-common/sales-domain/sales-domain-core/pom.xml
+++ b/sales/sales-common/sales-domain/sales-domain-core/pom.xml
@@ -5,18 +5,10 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.klemo.ecommerce</groupId>
-        <artifactId>ecommerce</artifactId>
+        <artifactId>sales-common</artifactId>
         <version>1.0-SNAPSHOT</version>
+        <relativePath>../../pom.xml</relativePath>
     </parent>
 
-    <artifactId>sales</artifactId>
-    <packaging>pom</packaging>
-
-    <modules>
-        <module>cart</module>
-        <module>catalog</module>
-        <module>order</module>
-        <module>cart/cart-domain</module>
-        <module>sales-common</module>
-    </modules>
+    <artifactId>sales-domain-core</artifactId>
 </project>
