--- a/sales/sales-common/sales-infrastructure/sales-dataaccess/pom.xml
+++ b/sales/sales-common/sales-infrastructure/sales-dataaccess/pom.xml
@@ -5,19 +5,9 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.klemo.ecommerce</groupId>
-        <artifactId>sales</artifactId>
+        <artifactId>sales-common</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <packaging>pom</packaging>
-
-    <artifactId>sales-common</artifactId>
-
-    <modules>
-        <module>sales-domain</module>
-        <module>sales-domain/sales-domain-core</module>
-        <module>sales-domain/sales-application-service</module>
-        <module>sales-infrastructure</module>
-        <module>sales-infrastructure/sales-dataaccess</module>
-    </modules>
+    <artifactId>sales-dataaccess</artifactId>
 </project>
