--- a/sales/sales-common/sales-domain/sales-application-service/pom.xml
+++ b/sales/sales-common/sales-domain/sales-application-service/pom.xml
@@ -11,4 +11,23 @@
     </parent>
 
     <artifactId>sales-application-service</artifactId>
+
+    <dependencies>
+        <dependency>
+            <groupId>com.klemo.ecommerce</groupId>
+            <artifactId>common-domain</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.klemo.ecommerce</groupId>
+            <artifactId>sales-domain-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-tx</artifactId>
+        </dependency>
+    </dependencies>
 </project>
