--- a/sales/sales-common/sales-infrastructure/sales-dataaccess/pom.xml
+++ b/sales/sales-common/sales-infrastructure/sales-dataaccess/pom.xml
@@ -7,7 +7,23 @@
         <groupId>com.klemo.ecommerce</groupId>
         <artifactId>sales-common</artifactId>
         <version>1.0-SNAPSHOT</version>
+        <relativePath>../../pom.xml</relativePath>
     </parent>
 
     <artifactId>sales-dataaccess</artifactId>
+
+    <dependencies>
+        <dependency>
+            <groupId>com.klemo.ecommerce</groupId>
+            <artifactId>cart-application-service</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.klemo.ecommerce</groupId>
+            <artifactId>sales-application-service</artifactId>
+        </dependency>
+    </dependencies>
 </project>
