feat: addCartItem usecase

--- a/sales/cart/cart-domain/cart-application-service/pom.xml
+++ b/sales/cart/cart-domain/cart-application-service/pom.xml
@@ -19,6 +19,10 @@
         </dependency>
         <dependency>
             <groupId>com.klemo.ecommerce</groupId>
+            <artifactId>sales-application-service</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.klemo.ecommerce</groupId>
             <artifactId>common-domain</artifactId>
         </dependency>
         <dependency>
