feat: addCartItem usecase UI implementation, application module configuration, added data initialization SQL

--- a/application/pom.xml
+++ b/application/pom.xml
@@ -24,5 +24,9 @@
             <groupId>com.klemo.ecommerce</groupId>
             <artifactId>cart-dataaccess</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.klemo.ecommerce</groupId>
+            <artifactId>sales-dataaccess</artifactId>
+        </dependency>
     </dependencies>
 </project>
