--- a/application/src/main/resources/application.properties
+++ b/application/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.jpa.hibernate.ddl-auto=create-drop
+spring.sql.init.mode=always
 spring.jpa.defer-datasource-initialization=true
 spring.datasource.url=jdbc:h2:/tmp/ecommerce;AUTO_SERVER=TRUE
 spring.datasource.driverClassName=org.h2.Driver
