--- a/common/common-application/pom.xml
+++ b/common/common-application/pom.xml
@@ -5,11 +5,11 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.klemo.ecommerce</groupId>
-        <artifactId>cart</artifactId>
+        <artifactId>common</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>cart-application</artifactId>
+    <artifactId>common-application</artifactId>
 
     <dependencies>
         <dependency>
@@ -19,18 +19,6 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.klemo.ecommerce</groupId>
-            <artifactId>cart-application-service</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.klemo.ecommerce</groupId>
-            <artifactId>cart-dataaccess</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.klemo.ecommerce</groupId>
-            <artifactId>common-application</artifactId>
         </dependency>
     </dependencies>
 </project>
