--- a/sales/catalog/pom.xml
+++ b/sales/catalog/pom.xml
@@ -10,11 +10,13 @@
     </parent>
 
     <artifactId>catalog</artifactId>
-
-    <properties>
-        <maven.compiler.source>20</maven.compiler.source>
-        <maven.compiler.target>20</maven.compiler.target>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
-
+    <packaging>pom</packaging>
+    <modules>
+        <module>catalog-domain</module>
+        <module>catalog-domain/catalog-domain-core</module>
+        <module>catalog-domain/catalog-application-service</module>
+        <module>catalog-infrastructure</module>
+        <module>catalog-infrastructure/catalog-dataaccess</module>
+        <module>catalog-application</module>
+    </modules>
 </project>
