--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,11 @@
             </dependency>
             <dependency>
                 <groupId>com.klemo.ecommerce</groupId>
+                <artifactId>catalog-application</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.klemo.ecommerce</groupId>
                 <artifactId>catalog-domain-core</artifactId>
                 <version>${project.version}</version>
             </dependency>
