--- a/sales/catalog/catalog-domain/catalog-application-service/pom.xml
+++ b/sales/catalog/catalog-domain/catalog-application-service/pom.xml
@@ -17,5 +17,21 @@
             <groupId>com.klemo.ecommerce</groupId>
             <artifactId>catalog-domain-core</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.klemo.ecommerce</groupId>
+            <artifactId>sales-application-service</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.klemo.ecommerce</groupId>
+            <artifactId>common-domain</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-tx</artifactId>
+        </dependency>
     </dependencies>
 </project>
