feat: add portal module - contains usecases or controllers that shares logic between entities, separated to prevent pollution

--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <module>sales</module>
         <module>common</module>
         <module>common/common-domain</module>
+        <module>portal</module>
     </modules>
 
     <properties>
