--- a/portal/portal-application/pom.xml
+++ b/portal/portal-application/pom.xml
@@ -10,4 +10,23 @@
     </parent>
 
     <artifactId>portal-application</artifactId>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.klemo.ecommerce</groupId>
+            <artifactId>portal-application-service</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.klemo.ecommerce</groupId>
+            <artifactId>common-application</artifactId>
+        </dependency>
+    </dependencies>
 </project>
