--- a/sales/catalog/catalog-infrastructure/catalog-dataaccess/pom.xml
+++ b/sales/catalog/catalog-infrastructure/catalog-dataaccess/pom.xml
@@ -17,5 +17,9 @@
             <groupId>com.klemo.ecommerce</groupId>
             <artifactId>catalog-application-service</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
     </dependencies>
 </project>
