--- a/warehouse/warehouse-domain/warehouse-application-service/pom.xml
+++ b/warehouse/warehouse-domain/warehouse-application-service/pom.xml
@@ -10,4 +10,23 @@
     </parent>
 
     <artifactId>warehouse-application-service</artifactId>
+
+    <dependencies>
+        <dependency>
+            <groupId>com.klemo.ecommerce</groupId>
+            <artifactId>warehouse-domain-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.klemo.ecommerce</groupId>
+            <artifactId>common-domain</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-tx</artifactId>
+        </dependency>
+    </dependencies>
 </project>
