--- a/warehouse/warehouse-domain/warehouse-domain-core/pom.xml
+++ b/warehouse/warehouse-domain/warehouse-domain-core/pom.xml
@@ -10,4 +10,11 @@
     </parent>
 
     <artifactId>warehouse-domain-core</artifactId>
+
+    <dependencies>
+        <dependency>
+            <groupId>com.klemo.ecommerce</groupId>
+            <artifactId>common-domain</artifactId>
+        </dependency>
+    </dependencies>
 </project>
