feat: implement warehouse dataaccess, add in stock quantity information to list products and list product details responses

--- a/application/pom.xml
+++ b/application/pom.xml
@@ -30,6 +30,10 @@
         </dependency>
         <dependency>
             <groupId>com.klemo.ecommerce</groupId>
+            <artifactId>warehouse-dataaccess</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.klemo.ecommerce</groupId>
             <artifactId>portal-application</artifactId>
         </dependency>
     </dependencies>
