--- a/portal/portal-application-service/pom.xml
+++ b/portal/portal-application-service/pom.xml
@@ -29,6 +29,10 @@
             <artifactId>catalog-domain-core</artifactId>
         </dependency>
         <dependency>
+            <groupId>com.klemo.ecommerce</groupId>
+            <artifactId>warehouse-application-service</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
