--- a/sales/order/order-domain/order-domain-core/pom.xml
+++ b/sales/order/order-domain/order-domain-core/pom.xml
@@ -5,15 +5,10 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.klemo.ecommerce</groupId>
-        <artifactId>sales</artifactId>
+        <artifactId>ecommerce</artifactId>
         <version>1.0-SNAPSHOT</version>
+        <relativePath>../../../../pom.xml</relativePath>
     </parent>
 
-    <artifactId>order</artifactId>
-
-    <packaging>pom</packaging>
-
-    <modules>
-        <module>order-domain</module>
-    </modules>
+    <artifactId>order-domain-core</artifactId>
 </project>
