--- a/sales/order/order-domain/pom.xml
+++ b/sales/order/order-domain/pom.xml
@@ -5,15 +5,16 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.klemo.ecommerce</groupId>
-        <artifactId>sales</artifactId>
+        <artifactId>order</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>order</artifactId>
+    <artifactId>order-domain</artifactId>
 
     <packaging>pom</packaging>
 
     <modules>
-        <module>order-domain</module>
+        <module>order-domain-core</module>
+        <module>order-application-service</module>
     </modules>
 </project>
