--- a/common/pom.xml
+++ b/common/pom.xml
@@ -13,5 +13,6 @@
     <packaging>pom</packaging>
     <modules>
         <module>common-application</module>
+        <module>common-domain</module>
     </modules>
 </project>
