--- a/sales/order/order-domain/order-domain-core/pom.xml
+++ b/sales/order/order-domain/order-domain-core/pom.xml
@@ -11,4 +11,11 @@
     </parent>
 
     <artifactId>order-domain-core</artifactId>
+
+    <dependencies>
+        <dependency>
+            <groupId>com.klemo.ecommerce</groupId>
+            <artifactId>common-domain</artifactId>
+        </dependency>
+    </dependencies>
 </project>
