--- a/sales/order/order-infrastructure/order-dataaccess/pom.xml
+++ b/sales/order/order-infrastructure/order-dataaccess/pom.xml
@@ -5,16 +5,25 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.klemo.ecommerce</groupId>
-        <artifactId>order-domain</artifactId>
+        <artifactId>order-infrastructure</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>order-application-service</artifactId>
+    <artifactId>order-dataaccess</artifactId>
 
     <dependencies>
         <dependency>
             <groupId>com.klemo.ecommerce</groupId>
-            <artifactId>order-domain-core</artifactId>
+            <artifactId>order-application-service</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>runtime</scope>
         </dependency>
     </dependencies>
 </project>
