--- a/sales/order/order-infrastructure/pom.xml
+++ b/sales/order/order-infrastructure/pom.xml
@@ -5,16 +5,15 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.klemo.ecommerce</groupId>
-        <artifactId>sales</artifactId>
+        <artifactId>order</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>order</artifactId>
+    <artifactId>order-infrastructure</artifactId>
 
     <packaging>pom</packaging>
 
     <modules>
-        <module>order-domain</module>
-        <module>order-infrastructure</module>
+        <module>order-dataaccess</module>
     </modules>
 </project>
