--- a/application/src/main/resources/application.properties
+++ b/application/src/main/resources/application.properties
@@ -9,3 +9,19 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 spring.sql.init.platform=h2
 spring.h2.console.enabled=true
+
+spring.kafka.bootstrap-servers=localhost:29092
+
+spring.kafka.consumer.bootstrap-servers=localhost:29092
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
+spring.kafka.consumer.group-id=payment-consumer
+spring.kafka.consumer.properties.spring.json.trusted.packages=*
+
+spring.kafka.producer.bootstrap-servers=localhost:29092
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+spring.kafka.producer.acks=all
+spring.kafka.producer.batch-size=16384
+
+kafka.payment-request-topic-name=payment-request
