--- a/infrastructure/pom.xml
+++ b/infrastructure/pom.xml
@@ -5,16 +5,13 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.klemo.ecommerce</groupId>
-        <artifactId>order</artifactId>
+        <artifactId>ecommerce</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>order-infrastructure</artifactId>
-
+    <artifactId>infrastructure</artifactId>
     <packaging>pom</packaging>
-
     <modules>
-        <module>order-dataaccess</module>
-        <module>order-messaging</module>
+        <module>kafka</module>
     </modules>
 </project>
