--- a/payment/payment-infrastructure/payment-messaging/pom.xml
+++ b/payment/payment-infrastructure/payment-messaging/pom.xml
@@ -5,24 +5,24 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.klemo.ecommerce</groupId>
-        <artifactId>payment-domain</artifactId>
+        <artifactId>payment-infrastructure</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>payment-application-service</artifactId>
+    <artifactId>payment-messaging</artifactId>
 
     <dependencies>
         <dependency>
             <groupId>com.klemo.ecommerce</groupId>
-            <artifactId>payment-domain-core</artifactId>
+            <artifactId>kafka</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-validation</artifactId>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-tx</artifactId>
+            <groupId>com.klemo.ecommerce</groupId>
+            <artifactId>payment-application-service</artifactId>
         </dependency>
     </dependencies>
 </project>
