--- a/sales/order/order-domain/order-application-service/pom.xml
+++ b/sales/order/order-domain/order-application-service/pom.xml
@@ -16,5 +16,13 @@
             <groupId>com.klemo.ecommerce</groupId>
             <artifactId>order-domain-core</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-tx</artifactId>
+        </dependency>
     </dependencies>
 </project>
